Do not allow multi-datastore transactions
Cross-datastore transtions are something that does not fit into
interaction model of neither MD-SAL nor NETCONF WG. As we are evolving
our APIs to make them impossible, make sure we report attempts to use
transations across multiple datastore.

JIRA: MDSAL-775
Change-Id: If9a3bb619f4fd5703f786d14f42485d2073968ec
Signed-off-by: Ruslan Kashapov <ruslan.kashapov@pantheon.tech>
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>