@@ -12,30 +12,32 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertThrows;
 import static org.mockito.Mockito.doThrow;
+import static org.opendaylight.mdsal.common.api.LogicalDatastoreType.CONFIGURATION;
+import static org.opendaylight.mdsal.common.api.LogicalDatastoreType.OPERATIONAL;
 
-import com.google.common.collect.ImmutableMap;
 import java.util.Map;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 import org.opendaylight.mdsal.common.api.LogicalDatastoreType;
+import org.opendaylight.mdsal.common.api.TransactionDatastoreMismatchException;
 import org.opendaylight.mdsal.dom.spi.store.DOMStoreTransaction;
 
 @RunWith(MockitoJUnitRunner.StrictStubs.class)
 public class AbstractDOMForwardedCompositeTransactionTest {
     @Mock
-    public DOMStoreTransaction failTx1;
+    public DOMStoreTransaction configTx;
     @Mock
-    public DOMStoreTransaction failTx2;
+    public DOMStoreTransaction operationalTx;
 
     @Test
     public void closeSubtransactionsTest() throws Exception {
-        doThrow(UnsupportedOperationException.class).when(failTx1).close();
-        doThrow(UnsupportedOperationException.class).when(failTx2).close();
+        doThrow(UnsupportedOperationException.class).when(configTx).close();
+        doThrow(UnsupportedOperationException.class).when(operationalTx).close();
 
-        final var domForwardedCompositeTransaction = new DOMForwardedCompositeTransactionTestImpl("testIdent",
-            ImmutableMap.of(LogicalDatastoreType.CONFIGURATION, failTx1, LogicalDatastoreType.OPERATIONAL, failTx2));
+        final var domForwardedCompositeTransaction = new DOMForwardedCompositeTransactionTestImpl("test",
+                Map.of(CONFIGURATION, configTx, OPERATIONAL, operationalTx));
 
         final var ex = assertThrows(IllegalStateException.class,
             domForwardedCompositeTransaction::closeSubtransactions);
@@ -43,10 +45,22 @@ public class AbstractDOMForwardedCompositeTransactionTest {
         assertThat(ex.getCause(), instanceOf(UnsupportedOperationException.class));
     }
 
+    @Test
+    public void datastoreMismatchOnGetSubtransaction() {
+        final var compositeTx1 = new DOMForwardedCompositeTransactionTestImpl("test",
+                Map.of(CONFIGURATION, configTx, OPERATIONAL, operationalTx));
+
+        assertEquals(configTx, compositeTx1.getSubtransaction(CONFIGURATION));
+        final var exception = assertThrows(TransactionDatastoreMismatchException.class,
+                () -> compositeTx1.getSubtransaction(OPERATIONAL));
+        assertEquals(CONFIGURATION, exception.expected());
+        assertEquals(OPERATIONAL, exception.encountered());
+    }
+
     private static final class DOMForwardedCompositeTransactionTestImpl
             extends AbstractDOMForwardedCompositeTransaction<DOMStoreTransaction> {
         DOMForwardedCompositeTransactionTestImpl(final Object identifier,
-                                                 final Map<LogicalDatastoreType, DOMStoreTransaction> backingTxs) {
+                final Map<LogicalDatastoreType, DOMStoreTransaction> backingTxs) {
             super(identifier, backingTxs);
         }
     }
